--- a/favicons/manifest.json
+++ b/favicons/manifest.json
@@ -2,7 +2,7 @@
     "name": "",
     "icons": [
         {
-            "src": "/android-chrome-144x144.png",
+            "src": "/favicons/android-chrome-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
         }
